# untaped

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  conftest.py  main.py  pyproject.toml  pytest_results.txt
.cursor/rules/: project-management.mdc  specify-rules.mdc  uv-rules.mdc
.github/: copilot-instructions.md
.github/release/: release.py
.github/release/templates/: release.yml.tmpl  test_release_workflow.py.tmpl
.github/release/tests/: test_release_helper.py
.github/workflows/: ci.yml  pypi-package-release.yml  release-smoke.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.untaped/orchestration/: registry.toml  store.toml
.untaped/orchestration/decisions/: dec_019f68b6b2cb75a9a7cb908963b4b59c-untaped-is-an-sdk-not-an-app-plugins-retired.md  dec_019f68b6b3da73acb58a68dffdc85adc-profiles-and-themes-are-absorbed-into-the-sdk.md  dec_019f68b6b4e475179664a514f3771211-pipe-envelope-v1-versioned-independently-of-the-sdk.md  dec_019f68b6b5ea758190f84ea79ed1cfbf-config-format-v1-sdk-1-x-v2-sdk-2-x.md  dec_019f68b6b6f0748b8a01f0cbe11b7f12-the-sdk-ships-no-core-agent-skill.md  dec_019f68b6b7f87484ae84f7b788f38138-emit-detail-routing-and-safe-http-retries-sdk-2-1.md  dec_019f68b6b8fe72f49640813dd3240a0c-tool-versions-come-from-installed-distribution-metadata-sdk-3-1.md
.untaped/orchestration/views/: decisions.md
docs/: API.md  README.md  awx.md  configuration.md  decisions.md  documentation.md  github-commands.md  github.md  migration.md  performance.md  plugins.md  release.md  skills.md  tool-conventions.md  workspace.md
docs/orchestration-migration/: coverage.toml  import.toml  review.md
docs/orchestration-migration/records/: decision-01.md  decision-01.toml  decision-02.md  decision-02.toml  decision-03.md  decision-03.toml  decision-04.md  decision-04.toml  decision-05.md  decision-05.toml  decision-06.md  decision-06.toml  decision-07.md  decision-07.toml
docs/specs/: 2026-06-15-managed-runtime-uv-project-design.md
docs/superpowers/plans/: 2026-07-02-sdk-3.0-core-wave.md
docs/superpowers/specs/: 2026-07-01-sdk-3.0-redesign-design.md
scripts/: install.sh  sync_domains.py  sync_plugins.py
specs/001-mvp-scope-resources/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-scope-resources/contracts/: cli-contracts.md  tower-api-contracts.md
specs/002-let-s-add/: manual-validation-checklist.md  plan.md  spec.md  tasks.md
src/untaped/: __init__.py  __main__.py  api.py  app_context.py  batch.py  cli.py  concurrency.py  config_app.py  config_file.py  config_schema.py  diff.py  environment.py  errors.py  fs.py  http.py  identity.py  install_paths.py  installer.py  main.py  output.py  pipe.py  plugin_context.py  plugin_deps.py  plugin_http.py  plugin_registry.py  plugin_specs.py  plugin_state.py  plugin_sync.py  plugins.py  profile_resolver.py  progress.py  prompts.py  quiet.py  render.py  run.py  settings.py  settings_layout.py  skills.py  skills_app.py  state.py  (+6 more)
src/untaped/config/: __init__.py  app.py  doctor.py  editor.py  models.py  ports.py  prompting.py  repository.py  use_cases.py
src/untaped/config/application/: __init__.py  context.py  get_setting.py  list_settings.py  ports.py  set_setting.py  unset_setting.py
src/untaped/config/cli/: __init__.py  commands.py
src/untaped/config/domain/: __init__.py  formatting.py  models.py
src/untaped/config/infrastructure/: __init__.py  settings_repo.py
src/untaped/profile/: __init__.py  app.py  ports.py  repository.py  use_cases.py
src/untaped/skill_assets/untaped/: SKILL.md
tests/contract/: test_cli_create_job_template.py  test_cli_create_workflow.py  test_cli_delete_job_template.py  test_cli_delete_workflow.py  test_cli_update_job_template.py  test_cli_update_workflow.py  test_tower_api_auth.py  test_tower_api_job_templates.py  test_tower_api_resources.py  test_tower_api_workflows.py
tests/integration/: test_resource_deletion.py  test_resource_update.py  test_simple_job_template.py  test_template_errors.py  test_templated_job_creation.py  test_validation_errors.py  test_workflow_creation.py
tests/performance/: test_template_performance.py  test_validation_performance.py
tests/unit/: conftest.py  test_api_surface.py  test_app_context.py  test_batch.py  test_cli.py  test_cli_common.py  test_cli_helpers.py  test_command_aware_messaging.py  test_concurrency.py  test_config_app.py  test_config_file.py  test_config_schema.py  test_config_validator.py  test_diff.py  test_environment.py  test_error_formatter.py  test_errors.py  test_format_raw_first_key.py  test_fs.py  test_get_setting.py  test_http.py  test_http_global.py  test_http_profile.py  test_http_retry.py  test_http_toolkit.py  test_identifiers.py  test_import_cost.py  test_import_linter_contracts.py  test_inmemory_api.py  test_installer.py  test_invariants.py  test_layering.py  test_layout_settings_source.py  test_lazy_cli_mounting.py  test_list_settings.py  test_main.py  test_models_validation.py  test_orchestration_adoption.py  test_output.py  test_pipe.py  (+54 more)
