[project]
name = "untaped"
version = "0.1.0"
description = "A personal DevOps CLI suite."
readme = "README.md"
authors = [
    { name = "Alexis Beaulieu", email = "alexisbeaulieu97@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.25.1",
    "untaped-core",
    "untaped-config",
    "untaped-workspace",
    "untaped-awx",
    "untaped-github",
    "untaped-profile",
]

[project.scripts]
untaped = "untaped.main:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
untaped-core = { workspace = true }
untaped-config = { workspace = true }
untaped-workspace = { workspace = true }
untaped-awx = { workspace = true }
untaped-github = { workspace = true }
untaped-profile = { workspace = true }

[dependency-groups]
dev = [
    "import-linter>=2.4",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.importlinter]
root_packages = [
    "untaped",
    "untaped_core",
    "untaped_config",
    "untaped_profile",
    "untaped_workspace",
    "untaped_awx",
    "untaped_github",
]
# TYPE_CHECKING imports don't create runtime edges; the layered DDD rule
# allows them. tests/unit/test_layering.py documents and enforces the same
# exception via AST walk — keep both checkers in sync if the rule changes.
exclude_type_checking_imports = true

# `untaped` (root aggregator: importing every domain is its job) and
# `untaped_core` (flat shared library, no DDD layers) are intentionally
# absent from the per-domain layers + independence contracts. The
# `core → siblings` direction is forbidden separately below. When adding
# a new domain *to this config block*, append its import root to
# `root_packages` above, the `independence` contract's `modules`, the
# layers contract's `containers`, and the `untaped_core does not depend
# on any domain` contract's `forbidden_modules`. (Wider workspace
# touchpoints — `[tool.mypy] packages`, root `[project] dependencies`,
# `src/untaped/main.py` — are covered by the "Add a new domain package"
# recipe in the root AGENTS.md.)

[[tool.importlinter.contracts]]
name = "Sibling domains are mutually independent"
# `independence` says "these modules cannot import each other" — it does
# not restrict imports of any other module (e.g. `untaped_core` and
# third-party libs remain fair game).
type = "independence"
modules = [
    "untaped_awx",
    "untaped_workspace",
    "untaped_github",
    "untaped_config",
    "untaped_profile",
]

[[tool.importlinter.contracts]]
name = "Per-domain layers (cli > application | infrastructure > domain)"
type = "layers"
containers = [
    "untaped_awx",
    "untaped_workspace",
    "untaped_config",
    "untaped_profile",
    "untaped_github",
]
# `application | infrastructure` makes the two siblings of the same
# layer: `cli` may import both, both may import `domain`, but neither
# may import the other. This is the partial-order shape the 4-layer
# DDD diagram in AGENTS.md describes.
layers = [
    "cli",
    "application | infrastructure",
    "domain",
]

[[tool.importlinter.contracts]]
name = "untaped_core does not depend on any domain"
# `untaped_core` is the shared kit — by definition downstream-only.
# An accidental `core → sibling` import would invert the dependency
# direction and likely cause cycles at startup.
type = "forbidden"
source_modules = ["untaped_core"]
forbidden_modules = [
    "untaped",
    "untaped_awx",
    "untaped_workspace",
    "untaped_github",
    "untaped_config",
    "untaped_profile",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "C90",  # mccabe complexity (gate set in [tool.ruff.lint.mccabe])
    "RUF",  # ruff-specific
]
# Narrow opt-in to a single bandit rule. The jinja-autoescape check is
# load-bearing for the noqa in untaped_awx.infrastructure.test.parser's
# build_jinja_env, which documents why HTML escaping is intentionally off
# for YAML output.
extend-select = ["S701"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Tests can use assert statements and longer modules
"**/tests/**" = ["S101"]
# Typer's idiomatic API uses function-call defaults (typer.Option(...), typer.Argument(...)).
# Glob covers both ``commands.py`` and ``*_commands.py`` across every package so a new
# Typer command module doesn't require a per-file-ignores edit.
"**/cli/*commands*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
# Type-check src/ only; tests are validated by running them.
# Point at each package directory directly so mypy can derive module names
# unambiguously (mixing `src/` and `packages/*/src/` causes "found twice" errors).
packages = [
    "untaped",
    "untaped_core",
    "untaped_config",
    "untaped_profile",
    "untaped_workspace",
    "untaped_awx",
    "untaped_github",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages"]
# ``--import-mode=importlib`` doesn't expose ``tests`` as a package, so per-package
# ``tests/conftest.py`` modules aren't importable by sibling test files via
# ``from tests.conftest import …`` at runtime. Adding the workspace tests dir to
# ``pythonpath`` lets workspace test files share stubs via
# ``from conftest import StubGit, StubRegistry`` (avoiding 40+ fixture parameter
# additions). Awx keeps its TYPE_CHECKING + fixture pattern unchanged.
#
# Caveat: this claims the unqualified module name ``conftest`` globally for the
# pytest session. Do not add a second per-package tests dir to ``pythonpath`` —
# pick a unique module name (e.g. ``_<pkg>_stubs.py``) and import that. Other
# packages can still ship ``tests/conftest.py`` for pytest's auto-discovery;
# only the runtime ``from conftest import …`` pattern is exclusive to workspace.
pythonpath = ["packages/untaped-workspace/tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]
markers = [
    "integration: cross-package or external-service tests",
]

[tool.coverage.run]
branch = true
source = ["src", "packages"]
omit = ["**/tests/**", "**/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
