[project]
name = "untaped"
version = "0.1.0"
description = "A personal DevOps CLI suite."
readme = "README.md"
authors = [
    { name = "Alexis Beaulieu", email = "alexisbeaulieu97@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "filelock>=3.29.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "truststore>=0.10.4",
    "typer>=0.25.1",
]

[project.scripts]
untaped = "untaped.main:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/untaped-awx",
    "packages/untaped-github",
    "packages/untaped-profile",
    "packages/untaped-workspace",
]

[tool.uv.sources]
untaped = { workspace = true }
untaped-workspace = { workspace = true }
untaped-awx = { workspace = true }
untaped-github = { workspace = true }
untaped-profile = { workspace = true }

[dependency-groups]
dev = [
    "import-linter>=2.4",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.untaped]
# Sole source of truth for local plugin modules in this monorepo bridge step.
# `scripts/sync_plugins.py` regenerates Import Linter and mypy lists from this.
plugin_modules = [
    "untaped_awx",
    "untaped_github",
    "untaped_profile",
    "untaped_workspace",
]

[tool.importlinter]
root_packages = [
    "untaped",
    "untaped_awx",
    "untaped_github",
    "untaped_profile",
    "untaped_workspace",
]
# TYPE_CHECKING imports don't create runtime edges; the layered DDD rule
# allows them. tests/unit/test_layering.py documents and enforces the same
# exception via AST walk — keep both checkers in sync if the rule changes.
exclude_type_checking_imports = true

# The plugin module lists below and `[tool.mypy] packages` are regenerated
# from `[tool.untaped].plugin_modules`; edit that source list first.

[[tool.importlinter.contracts]]
name = "Sibling plugins are mutually independent"
# `independence` says "these modules cannot import each other" — it does
# not restrict imports of any other module (e.g. `untaped` and
# third-party libs remain fair game).
type = "independence"
modules = [
    "untaped_awx",
    "untaped_github",
    "untaped_profile",
    "untaped_workspace",
]

[[tool.importlinter.contracts]]
name = "Per-plugin layers (cli > application | infrastructure > domain)"
type = "layers"
containers = [
    "untaped_awx",
    "untaped_github",
    "untaped_profile",
    "untaped_workspace",
]
# `application | infrastructure` makes the two siblings of the same
# layer: `cli` may import both, both may import `domain`, but neither
# may import the other. This is the partial-order shape the 4-layer
# DDD diagram in AGENTS.md describes.
layers = [
    "cli",
    "application | infrastructure",
    "domain",
]

[[tool.importlinter.contracts]]
name = "untaped core does not statically import plugins"
type = "forbidden"
source_modules = ["untaped"]
forbidden_modules = [
    "untaped_awx",
    "untaped_github",
    "untaped_profile",
    "untaped_workspace",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "C90",  # mccabe complexity (gate set in [tool.ruff.lint.mccabe])
    "RUF",  # ruff-specific
]
# Narrow opt-in:
# - S701 (jinja-autoescape): load-bearing for the noqa in
#   untaped_awx.infrastructure.test.parser's build_jinja_env, which
#   documents why HTML escaping is intentionally off for YAML output.
# - PLC0415 (import-outside-top-level): load-bearing for the lazy-import
#   noqas in untaped_awx.cli.test_commands and untaped_awx.cli.completions,
#   which keep `awx --help` and `awx ping` fast by deferring jinja2/yaml/
#   the loader/runner. Tests use in-function imports freely and are
#   exempted via per-file-ignores below.
extend-select = ["S701", "PLC0415"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Tests can use assert statements; in-function imports are routine and
# idiomatic in tests (no startup-latency cost).
"**/tests/**" = ["S101", "PLC0415"]
# Typer's idiomatic API uses function-call defaults (typer.Option(...), typer.Argument(...)).
# Glob covers every module under a ``cli/`` directory — commands.py, *_commands.py, and
# the underscore-prefixed builder modules of the AWX spec-driven factory (``_list.py``,
# ``_get.py``, …) — so a new Typer command module doesn't require a per-file-ignores edit.
"**/cli/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
# Type-check src/ only; tests are validated by running them.
# Point at each package directory directly so mypy can derive module names
# unambiguously (mixing `src/` and `packages/*/src/` causes "found twice" errors).
packages = [
    "untaped",
    "untaped_awx",
    "untaped_github",
    "untaped_profile",
    "untaped_workspace",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages"]
# ``--import-mode=importlib`` doesn't expose ``tests`` as a package, so per-package
# ``tests/conftest.py`` modules aren't importable by sibling test files via
# ``from tests.conftest import …`` at runtime. Adding the workspace tests dir to
# ``pythonpath`` lets workspace test files share stubs via
# ``from conftest import StubGit, StubRegistry`` (avoiding 40+ fixture parameter
# additions). Awx keeps its TYPE_CHECKING + fixture pattern unchanged.
#
# Caveat: this claims the unqualified module name ``conftest`` globally for the
# pytest session. Do not add a second per-package tests dir to ``pythonpath`` —
# pick a unique module name (e.g. ``_<pkg>_stubs.py``) and import that. Other
# packages can still ship ``tests/conftest.py`` for pytest's auto-discovery;
# only the runtime ``from conftest import …`` pattern is exclusive to workspace.
pythonpath = ["packages/untaped-workspace/tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov",
    "--cov-report=term-missing",
    "--import-mode=importlib",
]
markers = [
    "integration: cross-package or external-service tests",
]

[tool.coverage.run]
branch = true
source = ["src", "packages"]
omit = ["**/tests/**", "**/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
